# FASTAPI_Learning

./: .gitignore  FASTAPI_Learning.code-workspace  README.md
Project1/: main.py
Project2/: main.py
Project3/: database.py  main.py  models.py
Project4/: Project3.db  README.md  custom_directory_image.py  pyproject.toml  todos_app_database.db  todos_test_app_database.db
Project4/alembic/: env.py
Project4/app/: config.py  database.py  exceptions.py  logger.py  main.py  models.py  schemas.py
Project4/app/routers/: admin.py  auth.py  todos.py  users.py
Project4/logs/: app.jsonl  config.jsonl  exceptions.jsonl  main.jsonl
Project4/static/js/: base.js  bootstrap.js.map  jquery-slim.js
Project4/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
Project4/test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
