[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.121.1",
    "multipart>=1.3.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "sqlalchemy>=2.0.44",
]
